--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-slider": "^1.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "jest": "^26.0.1",
+    "jest": "24.9.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
@@ -21,7 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slider": "^1.0.7",
-    "ts-jest": "^26.1.0",
+    "ts-jest": "24.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
