--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stream-disco",
   "version": "0.1.0",
   "dependencies": {
+    "@material/react-material-icon": "^0.15.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.0",
