--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/p5": "^0.9.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
@@ -14,10 +15,12 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "jest": "24.9.0",
+    "p5": "^1.0.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-p5-wrapper": "^2.0.0",
     "react-player": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
